[Fix] /findDetailFeed